--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 dataclasses-json==0.6.7
+distro==1.9.0
 dotenv==0.9.9
 Flask==3.1.0
 frozenlist==1.6.0
@@ -25,6 +26,7 @@ httpx-sse==0.4.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.9.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -32,6 +34,7 @@ jsonschema-specifications==2025.4.1
 langchain==0.3.25
 langchain-core==0.3.58
 langchain-ollama==0.3.2
+langchain-openai==0.3.16
 langchain-text-splitters==0.3.8
 langgraph==0.4.1
 langgraph-checkpoint==2.0.25
@@ -45,6 +48,7 @@ mypy_extensions==1.1.0
 narwhals==1.37.1
 numpy==2.2.5
 ollama==0.4.8
+openai==1.77.0
 orjson==3.10.18
 ormsgpack==1.9.1
 packaging==24.2
@@ -62,6 +66,7 @@ python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rpds-py==0.24.0
@@ -71,8 +76,10 @@ sniffio==1.3.1
 SQLAlchemy==2.0.40
 streamlit==1.45.0
 tenacity==9.1.2
+tiktoken==0.9.0
 toml==0.10.2
 tornado==6.4.2
+tqdm==4.67.1
 typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
