--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ colorama==0.4.6
 dataclasses-json==0.6.7
 distro==1.9.0
 dotenv==0.9.9
+fastapi==0.115.12
 Flask==3.1.0
 frozenlist==1.6.0
 gitdb==4.0.12
@@ -40,6 +41,7 @@ langgraph==0.4.1
 langgraph-checkpoint==2.0.25
 langgraph-prebuilt==0.1.8
 langgraph-sdk==0.1.66
+langserve==0.3.1
 langsmith==0.3.42
 MarkupSafe==3.0.2
 marshmallow==3.26.1
@@ -74,6 +76,8 @@ six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.40
+sse-starlette==1.8.2
+starlette==0.46.2
 streamlit==1.45.0
 tenacity==9.1.2
 tiktoken==0.9.0
@@ -85,6 +89,7 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
+uvicorn==0.34.2
 watchdog==6.0.0
 Werkzeug==3.1.3
 xxhash==3.5.0
